tests/errors/sem.out-of-order.call-args.or
main :: () -> void {
    add :: (b := 0, a: sint) -> sint {
        return a + b;
    };

    add(, b:20);
};
